--- a/settings.json
+++ b/settings.json
@@ -21,7 +21,7 @@
 	"mybio": "https://www.instagram.com/aandolith.21/?hl=id",
 	"trakteer": "-", 
 	"mygmail": "piubitt@gmail.com", 
-	"saweria": "https://saweria.co/Anwar", 
+	"saweria": "https://saweria.co/Anw", 
 	"myyoutube":"bit.ly/3s2UaT6", 
 	"mytiktok":"bit.ly/3m5xwpi", 
 	"mytwitter":"bit.ly/3yHNY4x", 
