--- a/settings.json
+++ b/settings.json
@@ -8,7 +8,7 @@
 	"promotesay": "*cie naik pangkat*",
 	"demotesay": "*yahahaha turun yah*",
 	"supportme": "https://saweria.co/Alvianto17", 
-	"fakereply": "Yannn - Bot", 
+	"fakereply": "Anwar P-YOK", 
 	"ownername": "Anwar p-yok", 
 	"owner": "6289607818722", 
 	"owner2": "62895401223315", 
