--- a/settings.json
+++ b/settings.json
@@ -11,13 +11,13 @@
 	"fakereply": "Anwar P-YOK", 
 	"ownername": "Anwar p-yok", 
 	"owner": "6289607818722", 
-	"owner2": "62895401223315", 
-	"ownername2": "Alvianto", 
-	"owner3": "62895401223315", 
-	"ownername3": "Alvianto", 
-	"developer": "62895401223315",  
-	"donasi": "0895401223315", 
-	"rekening": "0895401223315", 
+	"owner2": "6289607818722", 
+	"ownername2": "Anwar P-YOK", 
+	"owner3": "6289607818722", 
+	"ownername3": "Anwar P-YOK", 
+	"developer": "6289607818722",  
+	"donasi": "089607818722", 
+	"rekening": "089607818722", 
 	"mybio": "https://www.instagram.com/aandolith.21/?hl=id",
 	"trakteer": "-", 
 	"mygmail": "piubitt@gmail.com", 
